<?xml version="1.0" ?>
<package format="2">
  <name>arm_show</name>
  <version>0.0.1</version>
  <description>The arm_show package</description>

  <license>MIT</license>

  <maintainer email="dankirsdot@gmail.com">Daniil Kirsanov</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

</package>